Correct Honesty Statement

--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
                         <span class="h_statment">Honesty Statment</span>
                         <ul class="honesty_ul">
 
-                            <li>I have not received, I have not given, nor will I give or receive,
-                                any assistance to another student taking this exam, including
-                                discussing the exam with students in another section of the course. </li>
-                            <li> I will not plagiarize someone else’s work and turn it in as my own. </li>
+                            <li>I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy.</li>
+                            <li>No part of this assessment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use.</li>
+                             <li> I also declare that no part of this assignment has been distributed to other students. </li>
+                            
+                           
                         </ul>
                     </div>
 
